# anvil

./: .gitignore  .impeccable.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  skill-forge-spec.md  skills-lock.json  vite.config.ts
.github/: dependabot.yml  release.yml
.github/workflows/: build.yml  pages.yml  release.yml
docs/site/: index.html
site/: index.html
skills/: agent-email-inbox  resend-cli
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: agents.rs  marketplace.rs  mod.rs  settings.rs  skills.rs  watcher.rs
src-tauri/src/data/: agents.json
src-tauri/src/models/: agent.rs  config.rs  marketplace.rs  mod.rs  skill.rs
src-tauri/src/services/: fs.rs  lockfile.rs  mod.rs  parser.rs  scanner.rs  skills_cli.rs  symlink.rs  updater.rs
src/components/editor/: FrontmatterForm.tsx  SkillEditor.tsx  editorTheme.ts
src/components/layout/: CommandPalette.tsx  Sidebar.tsx  SkillDetail.tsx  SkillGroup.tsx  SkillList.tsx  SkillRow.tsx
src/components/marketplace/: MarketplaceBrowser.tsx  MarketplaceInstallDialog.tsx  ProgressLog.tsx  SkillCard.tsx  SkillDetailDialog.tsx  (+3 more)
src/hooks/: useAgents.ts  useFileWatcher.ts  useKeyboard.ts  useMarketplace.ts  useSkills.ts  useUpdateChecker.ts
src/lib/: constants.ts  diff-utils.ts  frontmatter.ts  skill-grouping.ts  tauri.ts  utils.ts
src/stores/: agentStore.ts  leaderboardStore.ts  marketplaceStore.ts  skillStore.ts  uiStore.ts  updateStore.ts
src/types/: index.ts
(+5 files in other folders)
