[package]
name = "anvil"
version = "0.1.0"
edition = "2021"

[lib]
name = "anvil_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "6"
serde_norway = "0.9"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
notify-debouncer-mini = { version = "0.5", features = [] }
trash = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
base64 = "0.22"
tokio = { version = "1", features = ["rt"] }

[dev-dependencies]
tempfile = "3"
